--- a/Cooling.html
+++ b/Cooling.html
@@ -6,7 +6,7 @@
         <title>PARKES</title>
 
       <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
-    <link rel="stylesheet" href="stylesheets/screencooling.css" type="text/css">
+    <link rel="stylesheet" href="stylesheets/screenintro.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
     
@@ -19,7 +19,15 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
 	<script type="text/javascript" src="slick/slick.min.js"></script>
     <script type='text/javascript' src="scripts/script.js"></script>
-
+<style>
+	 html {
+  background: url(img/032.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+  </style>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
   </head>
   <body id="body">
@@ -82,8 +90,8 @@
         <h2>The history behind it</h2>
         Cooling has been the big headache and a fast learning curve for me. But I can at least say it is under control, albeit not ideal though. I have endured 6 different pump impeller designs and countless radiator and path revisions. None came up to scratch. With each year of development came lots more power which maybe new news to most racers; it is not a direct correlation to thermal efficiencies. 
       </div>
-	  <div class="image-left-container">
-          <img src="img/032.jpg" class="image-left">
+	  <div class="image-left-container" width="310px">
+          <img src="img/032.jpg" class="image-left" width="290px">
           <div class="image-text">
             Prototype 7075 impeller; 1 off 6
           </div>
@@ -92,8 +100,8 @@
         <h2>The Problem</h2>
          The big alkilees heal is the liners and the open decks. The V4 Honda is a great block to work with but the open deck have pressure limitations. I distorted 3 blocks each within 20 minutes of use due to the sheer thermal and compression expansion rates in the combustion chamber. Both of which I knew nothing about when I started tuning. Yes, yes I know; If I had studied and drawn it in CAD in the first place I would of known all this but then I wouldn’t be building the bike: I would be talking about it down the pub instead.
       </div>
-	  <div class="image-right-container">
-          <img src="img/thermostat.jpg" class="image-right">
+	  <div class="image-right-container" width="200px">
+          <img src="img/thermostat.jpg" class="image-right" width="180px">
           <div class="image-text">
             Intricate temperature sensor housing manually machined
           </div>
@@ -102,8 +110,8 @@
 	       <h2>How it was done</h2>
          Boring and shrinking the many sets of liners in was a full 35 hour weekend of eyes wide open flat out concentration on Freddy’s Bridgeport to get everything just right for shrinking and machining. All faces and bores within 10 microns and super slow cuts to minimise the distortion through heat and vibration from my primitive homemade boring tools and Freddy’s excellent engine jig. I eventually ended up using my manual Bridgeport to do the last 2 engines which I actually preferred because I wasn’t sleeping in an industrial unit in Peterborough next to a compressor; I was in my own workshop.
       </div>
-	   <div class="image-left-container">
-          <img src="img/front rad.jpg" class="image-left">
+	   <div class="image-left-container" width="310px">
+          <img src="img/front rad.jpg" class="image-left" width="290px">
           <div class="image-text">
 		  Front radiator: Coolant pipes were packed with sand and hot bent
           </div>
@@ -122,7 +130,7 @@ The additional water, rads, pipes and ducting is costing me performance in so ma
         <h2>Foundry needed</h2>
 	  The multiple last place finishes have been down to the steering and/or spikes in poor cooling. I have built in many safe guards to protect the engine from melting. Anything over 85 degrees and the acceleration injection correction starts to drop off, mixture richens and advance drops. The ECU then monitors conditions as the temp rises further which effectively drops performance to the point where it feels like you are towing a dead horse. It does just enough to let me coast for the remaining laps and try to maintain corner speed whilst cruising down the straights just to get lap experience. There is so much to evaluate as well as ‘race’ that the amount of laps needed is high. If my calculations are right; at 14K rpm it is flowing a massive 3.3 litres of water every second! The temperature rises 5 degrees by dropping to 10K rpm; I like (or perhaps in this case I don't like) to imagine the pockets of dancing steam around the jackets at those temperatures, surface temperature of the pistons must be pushing high 300’s. Not helped by the fact that modern pistons are so wasted there is less surface to conduct the heat to the thermally inferior liners. If only I had a foundry!
         </div>
-		<img src="img/001.jpg" class="image-centre">
+		<img src="img/001.jpg" class="image-centre" width="500px">
           <div class="image-text">
             Cut through of the air flow through the seat section passing through the curved radiator: 1 off 3
           </div>
