--- a/Engine.html
+++ b/Engine.html
@@ -7,7 +7,7 @@
 
       
       <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
-    <link rel="stylesheet" href="stylesheets/screenengine.css" type="text/css">
+    <link rel="stylesheet" href="stylesheets/screenintro.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
     
@@ -20,7 +20,15 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
 	<script type="text/javascript" src="slick/slick.min.js"></script>
     <script type='text/javascript' src="scripts/script.js"></script>
-
+<style>
+	 html {
+  background: url(img/121.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+  </style>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
   </head>
   <body id="body">
@@ -84,8 +92,8 @@
         It has taken me 5 years on and off to develop the engine in amongst all of the other tasks. As it stands today it is fairly reliable and quite modestly powerful but I can see that I am reaching the limits of potential with the crankcases. It has been quite a learning experience and I have stumbled across some interesting tricks which you wouldn’t normally find in most tuned engines.
       </div>
 	  
-	  <div class="image-left-container">
-          <img src="img/29.jpg" class="image-left">
+	  <div class="image-left-container" width="430px">
+          <img src="img/29.jpg" class="image-left" width="400px">
           <div class="image-text">
             Test engines: 848cc 360 crank and 938cc 180 crank versions
           </div>
@@ -100,8 +108,8 @@
         To be honest if I had written this a year ago I would have told you the piston profile was the most important contribution. Or maybe the year before that would have been mechanical losses and friction. Appreciate it’s just a snapshot of one man trying to run a factories worth of development rather than a comprehensive engine tuning tutorial. I seem to have a hopelessly short memory; what I don’t document is sometimes lost, even though I felt I had mastered it at the time; something to do with my concentration for academia and the reasons I naturally take to making rather than read; I can just go and fabricate something with very little planning or knowledge and be totally immersed in it but when I need to concentrate on designing a new camshaft, clutch or steering system, I end up singing, tapping or day dreaming within seconds and drift in and out of focus without reward. Noticeable back when I was an art student back in my teens too. Are we still talking engines?
       </div>
 	  
-	  <div class="image-right-container">
-          <img src="img/067.jpg" class="image-right">
+	  <div class="image-right-container" width="420px">
+          <img src="img/067.jpg" class="image-right" width="400px">
           <div class="image-text">
             Machining the open deck supports on the bridgeport
           </div>
@@ -114,8 +122,8 @@
       <div class="grid-narrow-center">
         <h2>2017</h2>
         2017 brought the big bang engine, out to 938cc now; long stroke, stronger lighter conrods, new exhausts and most importantly a different firing order. Over to Kev’s dyno in Cradley for this one as Freddy had closed up. Kev’s is a rolling road; a good one but still only a rolling road, they have limitations and harder to quickly change loads to do the mid range work but far simplier to load the bike on at least! April 2017 saw the new motor make 150hp at 13,400 rpm.
-<div class="image-left-container">
-          <img src="img/guypaddock.jpg" class="image-left">
+<div class="image-left-container" width="430px">
+          <img src="img/guypaddock.jpg" class="image-left" width="400px">
           <div class="image-text">
             Guy and Tom discussing cam profiles
           </div>
