--- a/Introduction.html
+++ b/Introduction.html
@@ -16,6 +16,15 @@
     <script type="text/javascript" src="slick/slick.min.js"></script>
     <script type='text/javascript' src="scripts/script.js"></script>
 
+	<style>
+	 html {
+  background: url(img/037.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+  </style>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
   </head>
   <body id="body">
@@ -76,14 +85,13 @@
       <div class="main-container">
         <div class="grid-span">
           <h2>The history behind it</h2>
-          Back in 2012, a seed was planted in my mind that having ridden many modern bikes across club and national series I found I was lacking the ability to find the limits of the machines without first finding it by crashing. Something I did my fair share
-          of in my early days of racing Ducati’s on some poor quality tyres the club would come by; taking homage of any discount offered regardless of quality. Reluctant to pursue a relentless story of refinement I started to think about what was missing. Not
-          knowing much about anything but naively believing I did led me to thinking there was a relationship missing; the psychology of what was below me; if I believed it was capable, how faster could I go? To go against the grain and start enjoying racing
+          Back in 2012, a seed was planted in my mind that having ridden many modern bikes across club and national series I found I was lacking the satisfaction I was hoping for when I started racing. Reluctant to pursue a relentless story of refinement I started 
+		  to think about what was missing; a relationship; the psychology of what was below me. If I believed it was capable, how faster could I go? To go against the grain and start enjoying racing
           again I purchased a £900 VFR800 that had been pulled out of the sea in Southampton in 2012. My plan was to always build a frame but what it would look like and what materials were mere minor details; it would happen, in good time.<br>
           As the developments have progressed to this day; the only component I am still using from that bike is the fuel pump. The rest has been made by myself using prodomently manual machines and hand fabrication techniques or for the few components I have
           not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere.
-          <div class="image-right-container">
-            <img src="img/2015.jpg" class="image-right">
+          <div class="image-right-container" width="350px">
+            <img src="img/2015.jpg" class="image-right" width="330px">
             <div class="image-text">
               The 1st build in Dec 2015
             </div>
@@ -91,7 +99,7 @@
         </div>
         <div class="grid-left-two">
           <h2>The business</h2>
-          A few years passed by where I persisted to run an engine tuning workshop and sub contract as an engineer to make up the 7 day working week, blindly making money like most of us I was doing my bit. I took the VFR in fairly standard trim; albeit with
+          A few years passed by where I persisted to run an engine tuning workshop and sub contract as an engineer to make up a busy 7 day working week. I took the VFR in fairly standard trim; albeit with
           my own fairings, exhaust and mildly tuned engine to the southern 100 amongst many club races for 2 years along with a 2nd modern bike to keep my eye in whilst I developed the VFR. The modern bikes kept me sharp for a while until a daft crash at the
           southern in 2014. When lying 2 inches under the broken Connor Cummins in the chopper I decided that I was done with the boredom of modern racing; tired of the same 600’s and 1000’s being painted a different colour with excessively priced go faster
           extras. At the time I had spent some hefty money; nearly £8K on my 1 year old Triumph 675R which got me to 15th in the A 600 class without really trying. Not willing to blindly pursue a pre determined fate I threw my dummy out, no more pretending. At
@@ -103,8 +111,8 @@
       </div>
       <div class="grid-right-three">
         <h2>Getting stuck in</h2>
-        <div class="image-left-container">
-          <img src="img/002.jpg" class="image-left">
+        <div class="image-left-container" width="390px">
+          <img src="img/002.jpg" class="image-left" width="370px">
           <div class="image-text">
             Developments in 2016
           </div>
@@ -123,13 +131,13 @@
         the 70’s and spend the proceeding decades refining it! Despite not getting on the podium at the toughest race tracks in the world; I believe it’s very early days and unbeknown to most, I can see some real potential in it. At slower speeds it’s the
         best bike I’ve ever ridden; smooth but yet solid and compliant, with do whatever you want whilst your braking steering. Just don’t go too fast into corners, just not yet anyway!
         <br>
-        <div class="image-right-container">
-          <img src="img/me2.jpg" class="image-right">
+        <div class="image-right-container" width="350px">
+          <img src="img/me2.jpg" class="image-right" width="330px">
           <div class="image-text">
             Tom Parkes
           </div>
         </div>
-        I don't consider myself to be smart; just motivated and persistant to challenge convention. I'm actually not a massive fan of all things motorcycle. Most of the top racers live and breath bikes day and night. I don't keep upto date with national or
+        Motivation has been easy to find as the project has picked up momentum as I try to challenge convention. I'm actually not a massive fan of all things motorcycle. Most of the top racers live and breath bikes day and night. I don't keep upto date with national or
         international racers; I watch one or two GP's a year if I'm not too busy in the shed when the repeats are on. I don't watch much TV either. From March through to December I watch a few films at night but other than that; TV's just junk. The machining
         skills and fabrication ability is all learnt on the fly; typical old fashioned British arrogance really. My father used to scare me that gearbox's were the work of the devil and I should never open the box or I would be haunted for eternity. Once I
         rebuilt that gearbox when I was 20 on that old single cylinder BSA from the 60's I wasn't phased by anything, buying the tools and machines I needed to do the job. 10 years later I've almost convinced myself that anything Honda can do; I can do
