--- a/Swingarm.html
+++ b/Swingarm.html
@@ -6,7 +6,7 @@
         <title>PARKES</title>
 
       <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
-    <link rel="stylesheet" href="stylesheets/screenswingarm.css" type="text/css">
+    <link rel="stylesheet" href="stylesheets/screenintro.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
     
@@ -19,7 +19,15 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
 	<script type="text/javascript" src="slick/slick.min.js"></script>
     <script type='text/javascript' src="scripts/script.js"></script>
-
+<style>
+	 html {
+  background: url(img/039.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+  </style>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
   </head>
   <body id="body">
@@ -83,8 +91,8 @@
         The swingarm is my latest venture in the run of component development. I have always experienced a huge amount of flex as I up the pace on corner entry. A full body weave as if it were hinged in the middle. The frame is still a work in progress but that aside I considered in principal that a road derived old cast swingarm is probably lacking in stiffness. You only need to look back to the alterations done by HRC 20 years ago to see it had issues. I wasn’t too impressed with their tactics though. They produced a thick 6mm plate that you could weld onto the top of the swingarm to add lateral stiffness. What a bodge! Then you could buy various cast variations with additional internal webs. They gave in and went double sided which is a logical step. I’m sticking with the single sided for now as I want to maintain the ability for fast wheel changes. 
       </div>
       	  
-	  <div class="image-right-container">
-          <img src="img/11.jpg" class="image-right">
+	  <div class="image-right-container" width="400px">
+          <img src="img/11.jpg" class="image-right" width="380px">
           <div class="image-text">
                  Hub clamp: Ripper cut on the Bridgeport using a rotary table
           </div>
@@ -98,10 +106,9 @@
         <h2>The new one</h2>
         First job was to benchmark the stiffness of the standard one which I had braced. I made a quick jig out of scrap steel to mount it rigidly and employed the services of a calibrated father figure to lean against it. The theory was to mark a spot on the floor about a meter away from the centre of the hub and get my dad to place his toes on the line. Then simply lean onto the swingarm, placing his hands on it first but allowing it to just touch his chest. I then took the measurements from the wall both before and after. That was my benchmark; 2mm of deflection measured at the furthest point on the swingarm.
       </div>
-	  
-	  <div class="image-left-container">
-          <img src="img/34.jpg" class="image-left">
-          <div class="image-text">
+	  <div class="image-left-container2">
+	      <img src="img/34.jpg" class="image-left" width="170px">
+		            <div class="image-text">
             Cushless drive, hub and axle - 2.4Kg reduction in reciprocating mass
           </div>
 		  </div>
@@ -109,7 +116,7 @@
       <div class="grid-narrow-center">
         <h2>The result</h2>
         Now I know what you’re thinking; where’s the consistency? No food was allowed in or out of the tester once testing commenced and the measurements were done 3 times on each just to make sure the blood flow was in all the right places.
-		The swingarm is constructed with 5083 throughout purely because it avoids the need for post weld heat treatment. Pivot mounts and hub clamp were machined from roled solid. Cast blocks are easy to obtain but roled offers slightly greater grain alignment but are harder to come by. Sheet sections are 3mm thick in the H111 condition, rolled and pressed using my excellent old flypress and rollers and then welded with 5356 rods. I love old equipment; solid cast iron. I am adament in years to come equipment like this will be the cherished like precious religious jewels. We are just coming out of the 'scrap it' phase so now is still a good time to buy.
+		The swingarm is constructed with 5083 throughout purely because it avoids the need for post weld heat treatment. Pivot mounts and hub clamp were machined from roled solid. Cast blocks are easy to obtain but roled offers slightly greater grain alignment but are harder to come by. Sheet sections are 3mm thick in the H111 condition, rolled and pressed using my old flypress and rollers and then welded with 5356 rods. The old equipment is great; solid cast iron. I am adament in years to come equipment like this will be the cherished jewels. We are just coming out of the 'scrap it' phase as some people recognise this.
       </div>
 	        <div class="grid-left-two">
         <h2>Other additions</h2>
