--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
     <script type='text/javascript' src="scripts/script.js"></script>
+	<script type="text/javascript" src="slick/slick.js"></script>
+    <script type="text/javascript" src="scripts/index.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
   </head>
@@ -103,15 +105,15 @@
       <div class="carousel-container">
         <div class="slider-parkes">
           <div class="slider-item">
-            <img src="img/southern1.jpg" class="slider-image" alt="">
+            <img src="img/paddock1.jpg" class="slider-image" alt="">
             <div class="slider-text">
-              2017 chassis - the safer and stronger chassis
+              2017 chassis - Isle of Man
             </div>
           </div>
           <div class="slider-item">
             <img src="img/002.jpg" class="slider-image" alt="">
             <div class="slider-text">
-              2017 cooling capacity increased 30%
+              2016 Plumbing the 8 fuel injectors
             </div>
           </div>
           <div class="slider-item">
@@ -123,13 +125,18 @@
           <div class="slider-item">
             <img src="img/main.jpg" class="slider-image" alt="">
             <div class="slider-text">
-              2016 chassis - the elastic chassis
+              2017 - Now with linear rising rate
+            </div>
+          </div>
+		  <div class="slider-item">
+            <img src="img/churchbends16.jpg" class="slider-image" alt="">
+            <div class="slider-text">
+              2016 - Hugging the wall on church bends
             </div>
           </div>
         </div>
       </div>
-      <script type="text/javascript" src="slick/slick.js"></script>
-      <script type="text/javascript" src="scripts/index.js"></script>
+      
     </div>
     <div class="grid-wide-center">
       <h6>Photo courtesy of Dave Kneen Photography</h6>
