--- a/Events.html
+++ b/Events.html
@@ -7,7 +7,7 @@
 
       
         <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
-    <link rel="stylesheet" href="stylesheets/screenevents.css" type="text/css">
+    <link rel="stylesheet" href="stylesheets/screenintro.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
     
@@ -20,7 +20,15 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
 	<script type="text/javascript" src="slick/slick.min.js"></script>
     <script type='text/javascript' src="scripts/script.js"></script>
-
+<style>
+	 html {
+  background: url(img/paddock1.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+  </style>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
   </head>
   <body id="body">
