--- a/exhausts.html
+++ b/exhausts.html
@@ -6,7 +6,7 @@
         <title>PARKES</title>
 
       <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
-    <link rel="stylesheet" href="stylesheets/screenexhausts.css" type="text/css">
+    <link rel="stylesheet" href="stylesheets/screenintro.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
     
@@ -19,7 +19,15 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
 	<script type="text/javascript" src="slick/slick.min.js"></script>
     <script type='text/javascript' src="scripts/script.js"></script>
-
+<style>
+	 html {
+  background: url(img/024.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+  </style>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
   </head>
   <body id="body">
@@ -79,8 +87,8 @@
 
             <div class="main-container">
       <div class="grid-span">
-	  		<div class="image-left-container">
-          <img src="img/ti can.jpg" class="image-left">
+	  		<div class="image-left-container" width="360px">
+          <img src="img/ti can.jpg" class="image-left" width="340px">
           <div class="image-text">
             Grade 2 fusion welded titanium silencer just 510g
           </div>
@@ -96,8 +104,8 @@ By the time I came around to make my first v4 system I did a back to back trial 
       </div>
       <div class="grid-right-three">
         <h2 align="left"> More is better</h2>
-		<div class="image-right-container">
-		<img src="img/003.jpg" class="image-right">
+		<div class="image-right-container" width="290px">
+		<img src="img/003.jpg" class="image-right" width="270px">
           <div class="image-text">
             Fusion welded header pipes
           </div>
