--- a/Chassis.html
+++ b/Chassis.html
@@ -62,7 +62,7 @@
               <a href="./Cooling.html">Cooling</a>
             </li>
             <li>
-              <a href="./Exhausts.html">Exhausts</a>
+              <a href="./exhausts.html">Exhausts</a>
             </li>
             <li>
               <a href="./Contact.html">Contact</a>
