--- a/Introduction.html
+++ b/Introduction.html
@@ -16,15 +16,15 @@
     <script type="text/javascript" src="slick/slick.min.js"></script>
     <script type='text/javascript' src="scripts/script.js"></script>
 
-	<style>
-	 html {
-  background: url(img/037.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-  </style>
+    <style>
+      html {
+        background: url("img/037.jpg") no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
   </head>
   <body id="body">
@@ -58,7 +58,7 @@
               <a href="./Cooling.html">Cooling</a>
             </li>
             <li>
-              <a href="./Exhausts.html">Exhausts</a>
+              <a href="./exhausts.html">Exhausts</a>
             </li>
             <li>
               <a href="./Contact.html">Contact</a>
@@ -85,9 +85,9 @@
       <div class="main-container">
         <div class="grid-span">
           <h2>The history behind it</h2>
-          Back in 2012, a seed was planted in my mind that having ridden many modern bikes across club and national series I found I was lacking the satisfaction I was hoping for when I started racing. Reluctant to pursue a relentless story of refinement I started 
-		  to think about what was missing; a relationship; the psychology of what was below me. If I believed it was capable, how faster could I go? To go against the grain and start enjoying racing
-          again I purchased a £900 VFR800 that had been pulled out of the sea in Southampton in 2012. My plan was to always build a frame but what it would look like and what materials were mere minor details; it would happen, in good time.<br>
+          Back in 2012, a seed was planted in my mind that having ridden many modern bikes across club and national series I found I was lacking the satisfaction I was hoping for when I started racing. Reluctant to pursue a relentless story of refinement I
+          started to think about what was missing; a relationship; the psychology of what was below me. If I believed it was capable, how faster could I go? To go against the grain and start enjoying racing again I purchased a £900 VFR800 that had been pulled
+          out of the sea in Southampton in 2012. My plan was to always build a frame but what it would look like and what materials were mere minor details; it would happen, in good time.<br>
           As the developments have progressed to this day; the only component I am still using from that bike is the fuel pump. The rest has been made by myself using prodomently manual machines and hand fabrication techniques or for the few components I have
           not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere.
           <div class="image-right-container" width="350px">
@@ -99,14 +99,14 @@
         </div>
         <div class="grid-left-two">
           <h2>The business</h2>
-          A few years passed by where I persisted to run an engine tuning workshop and sub contract as an engineer to make up a busy 7 day working week. I took the VFR in fairly standard trim; albeit with
-          my own fairings, exhaust and mildly tuned engine to the southern 100 amongst many club races for 2 years along with a 2nd modern bike to keep my eye in whilst I developed the VFR. The modern bikes kept me sharp for a while until a daft crash at the
-          southern in 2014. When lying 2 inches under the broken Connor Cummins in the chopper I decided that I was done with the boredom of modern racing; tired of the same 600’s and 1000’s being painted a different colour with excessively priced go faster
-          extras. At the time I had spent some hefty money; nearly £8K on my 1 year old Triumph 675R which got me to 15th in the A 600 class without really trying. Not willing to blindly pursue a pre determined fate I threw my dummy out, no more pretending. At
-          the same time I had learned that money wasn’t for me, life was for living. I am a big believer now that you are what you do and to a certain extent; what you look like too. If I was going to work all day, every day I would look like I had! If I only
-          worked on everyone else’s bike I wouldn’t learn how to build a chassis. I've a dim view on education these days; it's for those who can’t do. Perhaps generations before mine depended on an education system as skills and information were so precious
-          and harder to pass down. These days I believe we can all out perform any University degree with whats avaliable on line and some real motivation. The world's slowing waking up to this change but it's not likely to be published as it's a brilliant
-          source of revenue for the government. So my ethos is to crack on and learn the hard way.
+          A few years passed by where I persisted to run an engine tuning workshop and sub contract as an engineer to make up a busy 7 day working week. I took the VFR in fairly standard trim; albeit with my own fairings, exhaust and mildly tuned engine to the
+          southern 100 amongst many club races for 2 years along with a 2nd modern bike to keep my eye in whilst I developed the VFR. The modern bikes kept me sharp for a while until a daft crash at the southern in 2014. When lying 2 inches under the broken
+          Connor Cummins in the chopper I decided that I was done with the boredom of modern racing; tired of the same 600’s and 1000’s being painted a different colour with excessively priced go faster extras. At the time I had spent some hefty money; nearly
+          £8K on my 1 year old Triumph 675R which got me to 15th in the A 600 class without really trying. Not willing to blindly pursue a pre determined fate I threw my dummy out, no more pretending. At the same time I had learned that money wasn’t for me,
+          life was for living. I am a big believer now that you are what you do and to a certain extent; what you look like too. If I was going to work all day, every day I would look like I had! If I only worked on everyone else’s bike I wouldn’t learn how to
+          build a chassis. I've a dim view on education these days; it's for those who can’t do. Perhaps generations before mine depended on an education system as skills and information were so precious and harder to pass down. These days I believe we can all
+          out perform any University degree with whats avaliable on line and some real motivation. The world's slowing waking up to this change but it's not likely to be published as it's a brilliant source of revenue for the government. So my ethos is to
+          crack on and learn the hard way.
         </div>
       </div>
       <div class="grid-right-three">
@@ -137,11 +137,11 @@
             Tom Parkes
           </div>
         </div>
-        Motivation has been easy to find as the project has picked up momentum as I try to challenge convention. I'm actually not a massive fan of all things motorcycle. Most of the top racers live and breath bikes day and night. I don't keep upto date with national or
-        international racers; I watch one or two GP's a year if I'm not too busy in the shed when the repeats are on. I don't watch much TV either. From March through to December I watch a few films at night but other than that; TV's just junk. The machining
-        skills and fabrication ability is all learnt on the fly; typical old fashioned British arrogance really. My father used to scare me that gearbox's were the work of the devil and I should never open the box or I would be haunted for eternity. Once I
-        rebuilt that gearbox when I was 20 on that old single cylinder BSA from the 60's I wasn't phased by anything, buying the tools and machines I needed to do the job. 10 years later I've almost convinced myself that anything Honda can do; I can do
-        better.
+        Motivation has been easy to find as the project has picked up momentum as I try to challenge convention. I'm actually not a massive fan of all things motorcycle. Most of the top racers live and breath bikes day and night. I don't keep upto date with
+        national or international racers; I watch one or two GP's a year if I'm not too busy in the shed when the repeats are on. I don't watch much TV either. From March through to December I watch a few films at night but other than that; TV's just junk.
+        The machining skills and fabrication ability is all learnt on the fly; typical old fashioned British arrogance really. My father used to scare me that gearbox's were the work of the devil and I should never open the box or I would be haunted for
+        eternity. Once I rebuilt that gearbox when I was 20 on that old single cylinder BSA from the 60's I wasn't phased by anything, buying the tools and machines I needed to do the job. 10 years later I've almost convinced myself that anything Honda can
+        do; I can do better.
       </div <div class="grid-narrow-center">
       <h2>Look out for other new projects</h2>
       Keep an eye out for the new carbon fibre Parkes mountain bike project
