--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
     <script type='text/javascript' src="scripts/script.js"></script>
-	<script type="text/javascript" src="slick/slick.js"></script>
+    <script type="text/javascript" src="slick/slick.js"></script>
     <script type="text/javascript" src="scripts/index.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -53,7 +53,7 @@
               <a href="./Cooling.html">Cooling</a>
             </li>
             <li>
-              <a href="./Exhausts.html">Exhausts</a>
+              <a href="./exhausts.html">Exhausts</a>
             </li>
             <li>
               <a href="./Contact.html">Contact</a>
@@ -128,7 +128,7 @@
               2017 - Now with linear rising rate
             </div>
           </div>
-		  <div class="slider-item">
+          <div class="slider-item">
             <img src="img/churchbends16.jpg" class="slider-image" alt="">
             <div class="slider-text">
               2016 - Hugging the wall on church bends
@@ -136,7 +136,7 @@
           </div>
         </div>
       </div>
-      
+
     </div>
     <div class="grid-wide-center">
       <h6>Photo courtesy of Dave Kneen Photography</h6>
